tdf#170322 writerfilter: if dataBinding, then not richText

When a content control is not defined,
that means that it is a richText control.
If it was plainText, it would have contained a <w:text/> entry.

However, in practice, if there is a <w:dataBinding>
then MS Word treats it as plainText.

The biggest problem here is that we don't really support
blockSdt richText very well.
Although we round-trip it, we don't display it
as a content control in the application.

So I'm not about to change _unknown to _richText,
but just add in the bits that I've learned.
I was trying to prove that the change I made
to avoid fields being inside a plainText field
(because MS Word considers those documents to be corrupt).

Change-Id: I7cd2d8240ca92589741e347dc54301dd221f400a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197485
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>